--- a/Main_First.ipynb
+++ b/Main_First.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqDPx5/jpbvdz5W9jzx6/9",
+      "authorship_tag": "ABX9TyPC8+RNOg17IE2WqLpyyfsu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -437,6 +437,7 @@
         "# Example: Replace this with the raw URL of your GitHub file\n",
         "github_raw_url = 'https://raw.githubusercontent.com/mohamad-azrin/ADALL_github/refs/heads/main/laptop_prices_2024_sgd_TL.csv'\n",
         "try:\n",
+        "  #This is a new plan\n",
         "    df = pd.read_csv(github_raw_url)\n",
         "    print(\"Successfully loaded data from GitHub!\")\n",
         "    display(df.head())\n",
@@ -468,7 +469,7 @@
         "print(\"Missing values in each column:\")\n",
         "display(missing_values)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +610,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +674,7 @@
         "    print(f\"Error loading data: {e}\")\n",
         "    print(\"Please ensure the URL is correct and the file format is compatible with `pd.read_csv`.\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
